adding networks and persistence in database

--- a/email-worker-compose/docker-compose.yml
+++ b/email-worker-compose/docker-compose.yml
@@ -1,6 +1,9 @@
 version: '3'
 volumes: 
     dados:
+networks: 
+    web:
+    banco:
 services: 
     db:
         image: postgres:9.6
@@ -10,6 +13,8 @@ services:
             # scripts
             - ./scripts:/scripts
             - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+        networks:
+            - banco
     frontend:
         image: nginx:1.13
         volumes:
@@ -19,6 +24,10 @@ services:
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
         ports:
             - 80:80
+        networks: 
+            - web
+        depends_on: 
+            - app
     app:
         image: python:3.6
         volumes:
@@ -30,6 +39,11 @@ services:
         # com o proxy reverso nao precisa mais compartilhar essa porta
         #ports:
         #    - 8080:8080
+        networks: 
+            - web
+            - banco
+        depends_on: 
+            - bd
 
 
 # rodar no modo daemon
