--- a/email-worker-compose/docker-compose.yml
+++ b/email-worker-compose/docker-compose.yml
@@ -4,6 +4,7 @@ volumes:
 networks: 
     web:
     banco:
+    fila:
 services: 
     db:
         image: postgres:9.6
@@ -42,8 +43,25 @@ services:
         networks: 
             - web
             - banco
+            - fila
         depends_on: 
             - db
+            - queue
+    queue:
+        image: redis:3.2
+        networks: 
+            - fila
+    worker:
+        image: python:3.6
+        volumes:
+            # worker
+            - ./worker:/worker
+        working_dir: /worker
+        command: bash ./app.sh
+        networks: 
+            - fila
+        depends_on: 
+            - queue
 
 
 # rodar no modo daemon
