--- a/email-worker-compose/docker-compose.yml
+++ b/email-worker-compose/docker-compose.yml
@@ -48,7 +48,9 @@ services:
             - db
             - queue
         environment: 
-            - DB_NAME=email_sender
+            # - DB_NAME=email_sender
+            # definindo com erro para demonstrar que o overrided sobrescre
+            - DB_NAME=banco_inexistente
     queue:
         image: redis:3.2
         networks: 
